# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = [
    "hatchling==1.27.0",
]
build-backend = "hatchling.build"

[project]
name = "docker-stack"
description = "Programmatically author, schedule and monitor data pipelines"
requires-python = ">=3.10,!=3.14"
authors = [
    { name = "Apache Software Foundation", email = "dev@airflow.apache.org" },
]
maintainers = [
    { name = "Apache Software Foundation", email="dev@airflow.apache.org" },
]
keywords = [ "airflow", "orchestration", "workflow", "dag", "pipelines", "automation", "data" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Monitoring",
]

version = "0.0.1"

dependencies = [
    "apache-airflow-core",
    "apache-airflow-devel-common",
]

[tool.hatch.build.targets.sdist]
exclude = ["*"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
# To build docs run:
#
#    uv run --group docs sphinx-build -T --color -b html  . _build
#
# To check spelling:
#
#    uv run --group docs sphinx-build -T --color -b spelling  . _build
#
# To enable auto-refreshing build with server:
#
#    uv run --group docs sphinx-autobuild -T --color -b html  . _build
#
docs = [
    "apache-airflow-devel-common[docs]"
]

packages = []
