# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_airflow_theme"
description = "Airflow theme for Sphinx"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Apache Software Foundation", email = "dev@airflow.apache.org"}
]
dynamic = ["version"]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
dependencies = [
    "sphinx>=7"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[project.entry-points."sphinx.html_themes"]
sphinx_airflow_theme = "sphinx_airflow_theme"

[tool.flit.module]
name = "sphinx_airflow_theme"

[tool.flit.sdist]
include = [
    "sphinx_airflow_theme/**",
]
