# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-airflow-performance"
version = "0.1.0"
requires-python = ">=3.10,!=3.14"
description = "Performance testing utilities and DAGs for Apache Airflow"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
dependencies = [
    "apache-airflow>=3.1.3",
]
authors = [
    { name = "Apache Software Foundation", email = "dev@airflow.apache.org" },
]
classifiers = [
    "Private :: Do Not Upload",
]
