
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = [
    "hatchling==1.29.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pluggy==1.6.0",
    "tomli==2.4.0; python_version < '3.11'",
    "trove-classifiers==2026.1.14.14",
]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-scripts"
description = "Scripts and utilities for Apache Airflow CI, Docker, and development"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.10,!=3.15"
authors = [
    { name = "Apache Software Foundation", email = "dev@airflow.apache.org" },
]
maintainers = [
    { name = "Apache Software Foundation", email = "dev@airflow.apache.org" },
]
version = "0.0.1"

dependencies = [
    "astor>=0.8.1",
    "jsonschema>=4.19.1",
    "libcst>=1.1.0; python_version < '3.14'",
    "libcst>=1.8.6; python_version >= '3.14'",
    "packaging>=25.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "rich>=13.6.0",
    "rich-click>=1.9.7",
    "tabulate>=0.9.0",
    "termcolor>=2.3.0",
]

[dependency-groups]
dev = [
    "apache-airflow-devel-common",
]

[tool.uv.sources]
apache-airflow-devel-common = {workspace = true}

[tool.hatch.build.targets.sdist]
exclude = ["*"]

[tool.hatch.build.targets.wheel]
packages = ["ci", "cov", "docker", "in_container", "tools"]

[tool.pytest.ini_options]
# "." makes ci.prek.* importable as packages; "ci/prek" makes bare
# "from common_prek_utils import ..." inside those modules resolve correctly
# (mirroring what Python does automatically when scripts are run directly).
pythonpath = [".", "ci/prek", "in_container"]
